Carousel size fixed on mobile

--- a/src/components/Carousel/index.scss
+++ b/src/components/Carousel/index.scss
@@ -5,10 +5,14 @@
     width: 100%;
 }
 .carousel-image{
-    width: 70rem;
+    width: 70%;
     height: auto;
 }
 
 .carousel-indicators {
     bottom: -50px;
+}
+
+.carousel-inner{
+    width: 100%;
 }
